[package]
name = "uranus-grpc-server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
serde = { version = "1.0.196", features = ["derive"], default-features = false }
serde_json = "1.0.113"
reqwest = { version = "0.11.24", features = ["json", "native-tls"], default-features = false }
tokio-postgres = { version = "0.7", features = ["js"], default-features = false }
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
dotenvy = "0.15.7"

[build-dependencies]
tonic-build = "0.11.0"
